# linke

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/feast_featurestore/: README.md  get_feature_data.py
examples/feast_featurestore/feature_repo/: convert_csv2parquet.py  example_repo.py  feature_definition.py  feature_store.yaml
examples/feast_featurestore/feature_repo/data/: driver_stats.parquet  registry.db
examples/get_started/: pipeline.py
examples/masknet_recommender/: create_serving.py  feature_config.yaml  handler.py  model.py  model_config.yaml
examples/piepline/: pipeline.py
examples/piepline/components/: example_gen.py  trainer.py
examples/serving_torch_model/: README.md  config.properties  create_local_serving.py  create_serving.py  handler.py  model.py
examples/webdataset/: tabular2webdataset.py
kubeflow-components/dataset/: data_processor.py
kubeflow_components/dataset/: beam_data_processor.py  beam_data_processor_component.py
kubeflow_components/dataset/archive_fileio/: archivefileio.py
kubeflow_components/dataset/beam_data_processor/: beam_data_processor.py  example.proto  example_pb2.py  feature.proto  utils.py
kubeflow_components/evaluation/: evaluator.py  metrics.py
kubeflow_components/runner/: local_runner.py  vertex_runner.py
kubeflow_components/serving/: pusher.py
kubeflow_components/serving/torchserve/: Dockerfile  README.md  model_config.yaml  package.py  save_model.py  torchserve_client.py
kubeflow_components/setup/: local_minikube_setup.sh
kubeflow_components/tests/: conftest.py  test_beam_data_processor.py  test_metrics.py  test_runners.py
kubeflow_components/tests/data/: input.csv
linke/dataset/beam/: component.py  data_processor.py  example_gen.py
linke/dataset/beam_data_processor/: beam_data_processor.py  component.py  utils.py
linke/evaluation/: evaluator.py  metrics.py
linke/evaluation/beam/: evaluator.py  metrics.py
linke/tests/: test_beam_data_processor.py  test_beam_evaluator.py  test_beam_example_gen.py  test_beam_metrics.py  test_evaluator.py  test_metrics.py
linke/tests/data/: examples.csv
