[tool.poetry]
name = "kubeflow-components"
version = "0.1.0"
description = ""
authors = ["sapphire008 <cui23327@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.11, < 3.13"
apache-beam = "2.57.0"
kfp = "2.8.0"
numpy = "1.26.4"
pandas = "2.2.2"
docker = "7.1.0"
feast = "0.39.1"
google-cloud-aiplatform = "1.59.0"
tensorflow-metadata = "1.15.0"
protobuf = "4.25.3"

# Install extra dependencies using --with gcp
[tool.poetry.group.gcp.dependencies]
apache-beam = {extras = ["gcp"], version = "2.57.0"}
feast = {extras = ["gcp"], version = "0.39.1"}

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
