[tool.poetry]
name = "linke"
version = "0.1.1"
description = ""
authors = ["sapphire008 <cui23327@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.11, < 3.13"
apache-beam = "2.57.0"
kfp = "2.8.0"
numpy = "1.26.4"
pandas = "2.2.2"
docker = "7.1.0"
feast = "0.40.0"
google-cloud-aiplatform = "1.59.0"
tensorflow-metadata = "1.15.0"
protobuf = "4.25.3"
scipy = "1.14.1"

# Install extra dependencies using --with gcp
[tool.poetry.group.gcp.dependencies]
apache-beam = {extras = ["gcp"], version = "2.57.0"}
feast = {extras = ["gcp"], version = "0.40.0"}

# Install extra dependenceis using --with torch
[tool.poetry.group.torch.dependencies]
torch = "2.4.0"
torchserve = "0.11.1"
torch-model-archiver = "0.11.1"
nvgpu = "0.10.0"
webdataset = "0.2.100"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
pytest = "^8.2.2"
spyder-kernels = "3.0.0"
grpcio-tools = "1.62.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
